--- a/index.html
+++ b/index.html
@@ -13,8 +13,18 @@
 </head>
 
 <body>
-    <table id="mensajes" class="table">
-    </table>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">MQTT</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </nav>
+    <div class="container-fluid">
+        <h3 style="margin-top: 15px;">Mensajes:</h3>
+        <ul id="mensajes" class="list-group" style="max-width: 500px;"></ul>
+    </div>
+
 </body>
 
 </html>
