--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         </button>
     </nav>
     <div class="container-fluid">
-        <h3 style="margin-top: 15px;">Mensajes:</h3>
-        <ul id="mensajes" class="list-group" style="max-width: 500px;"></ul>
+        <h3 style="margin-top: 15px;">Denegado:</h3>
+        <ul id="denied-list" class="list-group" style="max-width: 500px;"></ul>
+        <h3 style="margin-top: 15px;">Permitido:</h3>
+        <ul id="allowed-list" class="list-group" style="max-width: 500px;"></ul>
     </div>
 
 </body>
