Add status button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
     </nav>
+    <button id="mqtt" class="btn btn-danger" type="button">MQTT</button>
     <div class="container-fluid">
         <h3 style="margin-top: 15px;">Denegado:</h3>
         <ul id="denied-list" class="list-group" style="max-width: 500px;"></ul>
