--- a/index.html
+++ b/index.html
@@ -1,32 +1,87 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>HKXPMG</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <title>MQTT server</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js"
         type="text/javascript"></script>
-    <script src="./src/paho.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">MQTT</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </nav>
-    <button id="mqtt" class="btn btn-danger" type="button">MQTT</button>
-    <div class="container-fluid">
-        <h3 style="margin-top: 15px;">Denegado:</h3>
-        <ul id="denied-list" class="list-group" style="max-width: 500px;"></ul>
-        <h3 style="margin-top: 15px;">Permitido:</h3>
-        <ul id="allowed-list" class="list-group" style="max-width: 500px;"></ul>
-    </div>
+    <button id="status" type="button" class="btn btn-danger">Dispositivo</button>
+    <button id="mqtt" type="button" class="btn btn-danger">Mqtt</button>
+    <p id="demo"></p>
+    <script>
+
+
+        client = new Paho.MQTT.Client("64.227.94.40", 8083, "");
+        // set callback handlers
+        client.onConnectionLost = onConnectionLost;
+        client.onMessageArrived = onMessageArrived;
+        // connect the client
+        client.connect({ onSuccess: onConnect });
+        // called when the client connects
+        function onConnect() {
+            document.getElementById("mqtt").classList.remove('btn-danger');
+            document.getElementById("mqtt").classList.add('btn-success');
+            // Once a connection has been made, make a subscription and send a message.
+            console.log("onConnect");
+
+            client.subscribe("proyecto/#");
+        }
+
+        // called when the client loses its connection
+        function onConnectionLost(responseObject) {
+            if (responseObject.errorCode !== 0) {
+                console.log("onConnectionLost:" + responseObject.errorMessage);
+                document.getElementById("mqtt").classList.remove('btn-success');
+                document.getElementById("mqtt").classList.add('btn-danger');
+            }
+        }
+        // called when a message arrives
+        function onMessageArrived(message) {
+            console.log(message.payloadString);
+            var json = $.parseJSON(message.payloadString);
+
+            if (json.type.localeCompare("heartbeat") == 0) {
+                online(json.time);
+            }
+            if (json.type.localeCompare("access") == 0) {
+                if (json.isKnow) {
+                    //Credencial Conocida
+                    alert("Bienvenido");
+                } else {
+                    //Credencial Desconocida
+                    alert("Peligro");
+                }
+            }
+
+
+        }
+
+        function online(time) {
+            //modificar el estilo del elemento mediante la clase
+            document.getElementById("status").classList.remove('btn-danger');
+            document.getElementById("status").classList.add('btn-success');
+
+            let unix_timestamp = time;
+            var date = new Date(unix_timestamp * 1000);
+            var Anio = date.getFullYear();
+            var Mes = date.getMonth();
+            var Dia = date.getDate();
+            var Hora = date.getHours();
+            var Minuto = "0" + date.getMinutes();
+            var Segundo = "0" + date.getSeconds();
+            var formattedTime = Anio + '-' + Mes + '-' + Dia + ' ' + Hora + ':' + Minuto.substr(-2) + ':' + Segundo.substr(-2);
+            document.getElementById("demo").innerHTML = formattedTime;
+        }
+
+    </script>
 
 </body>
 
