Revert "Split into files"
This reverts commit b3345a0c9d97d736d4ff1f12b36eeb3462d7e71d.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="./src/helpers.js"></script>
-    <script src="./src/paho.js"></script>
     <script src="./src/app.js"></script>
 </head>
 
@@ -23,7 +21,7 @@
         </button>
         <form class="form-inline">
             <button id="status" class="btn btn-danger my-2 my-sm-0" type="submit">Dispositivo</button>
-            <button id="mqtt" class="btn btn-danger my-2 my-sm-0" type="submit">MQTT</button>
+            <button id="mqtt" class="btn btn-danger my-2 my-sm-0" type="submit">Mqtt</button>
         </form>
     </nav>
 
