Enhance status button

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <form class="form-inline">
-            <button id="status" class="btn btn-danger my-2 my-sm-0" type="submit">Dispositivo</button>
-            <button id="mqtt" class="btn btn-danger my-2 my-sm-0" type="submit">Mqtt</button>
+            <button id="mqtt" class="btn btn-danger my-2 my-sm-0" type="submit">MQTT</button>
         </form>
     </nav>
 
