--- a/index.html
+++ b/index.html
@@ -14,14 +14,10 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">MQTT</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <form class="form-inline">
-            <button id="mqtt" class="btn btn-danger my-2 my-sm-0" type="submit">MQTT</button>
-        </form>
+        <a class="navbar-brand" href="#">UTZAC Access Control</a>
+        <div class="my-2 my-lg-0">
+            <button id="status" class="btn btn-danger my-2 my-sm-0" type="submit" onclick="connect()">Estado</button>
+        </div>
     </nav>
 
     <div class="container-fluid">
