Show status and server status

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">UTZAC Access Control</a>
         <div class="my-2 my-lg-0">
-            <button id="status" class="btn btn-danger my-2 my-sm-0" type="submit" onclick="connect()">Estado</button>
+            <button id="device" class="btn btn-danger my-2 my-sm-0">Device</button>
+            <button id="server" class="btn btn-danger my-2 my-sm-0">Server</button>
         </div>
     </nav>
 
