--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
         <a class="navbar-brand" href="#">UTZAC Access Control</a>
         <div class="my-2 my-lg-0">
             <button id="device" class="btn btn-danger my-2 my-sm-0">Device</button>
@@ -22,9 +22,9 @@
     </nav>
 
     <div class="container-fluid">
-        <h3 style="margin-top: 15px;">Denegado:</h3>
+        <h5 style="margin-top: 15px;">Denegado:</h5>
         <ul id="allowed_list" class="list-group" style="max-width: 500px;"></ul>
-        <h3 style="margin-top: 15px;">Permitido:</h3>
+        <h5 style="margin-top: 15px;">Permitido:</h5>
         <ul id="denied_list" class="list-group" style="max-width: 500px;"></ul>
     </div>
 </body>
