--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.css">
     <script src="./src/app.js"></script>
 </head>
 
@@ -16,8 +17,12 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
         <a class="navbar-brand" href="#">UTZAC Access Control</a>
         <div class="my-2 my-lg-0">
-            <button id="device" class="btn btn-danger my-2 my-sm-0">Device</button>
-            <button id="server" class="btn btn-danger my-2 my-sm-0">Server</button>
+            <button id="device" class="btn btn-danger my-2 my-sm-0">
+                <i class="fas fa-sd-card"></i>
+            </button>
+            <button id="server" class="btn btn-danger my-2 my-sm-0">
+                <i class="fas fa-server"></i>
+            </button>
         </div>
     </nav>
 
