light theme again

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">UTZAC Access Control</a>
         <div class="my-2 my-lg-0">
             <button id="device" class="btn btn-danger my-2 my-sm-0">
